actualizacion codigo eccomerce clase 1

--- a/javascript/Eccomerce/client/media/index.html
+++ b/javascript/Eccomerce/client/media/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+   <!--  <link rel="stylesheet" href="/javascript/Eccomerce/client/js/products.js"> -->
 </head>
 <body>
     <!--shop content-->
     <div class="card-products-container">
         <div class="card-products" id="shopContent"></div>
     </div>
+
+    
+    <script src="/javascript/Eccomerce/client/js/products.js"></script>
+    <script src="/javascript/Eccomerce/client/js/index.js"></script>
     
 </body>
 </html>
